# Labware-Layout-Planner

./: .gitignore  OT_2_code_gen.py  README.md  init.sh  init_poetry.sh  input.py  main_loop.py  main_loop_MAHOLO.py  pyproject.toml  requirements.txt  test_functions.py
qPCR_ozaki/2025-02-23_82ef653d-95dd-406f-9e6c-bb355a43e58b/iteration_0/: log.txt
qPCR_ozaki/2025-02-23_82ef653d-95dd-406f-9e6c-bb355a43e58b/iteration_1/: log.txt  representative_initial_position.txt
qPCR_ozaki/2025-02-23_82ef653d-95dd-406f-9e6c-bb355a43e58b/iteration_2/: log.txt
qPCR_ozaki/2025-02-23_82ef653d-95dd-406f-9e6c-bb355a43e58b/iteration_3/: log.txt
qPCR_ozaki/2025-02-23_82ef653d-95dd-406f-9e6c-bb355a43e58b/iteration_4/: log.txt  representative_initial_position.txt
qPCR_ozaki/754db528-ae48-4350-81b5-f00f8a7fbc43/iteration_0/: log.txt  (+2 more)
src/formationformatter/: check_chan.py  config.py  functions.py  haichi_kun.py  utils.py
test_case/: allowed_objects_qPCR.json  restricted_stations.json
test_case/absolute_restriction/: MAHOLO_restriction_inverted.json
test_case/hard_coded_variables/: MAHOLO_STATIONS.txt  MAHOLO_STATIONS_STR.txt  PROCESS_FLOW_DICT.txt  PROMPT.txt  PROMPT_TEMPLATE_SCRIPT.txt  PROMPT_骨子_HAICHI_REPLACE.txt
test_case/process_flows/: Colour water mix experiment.txt  IHC.txt  MAHOLO_cell_culture.txt  MAHOLO_cell_culture_mod_2025-04-13.txt  MAHOLO_cell_culture_mod_2025-05-09.txt  example_process_flow_for_obj_chan.txt  qPCR_ozaki_modified2025-02-28.txt
test_case/relative_restriction_init_content/: relative_restriction_CW.json
tests/: test_haichi_kun.py  test_obj_chan.py
(+664 files in other folders)
