[tool.poetry]
name = "formationformatter"
version = "0.1.0"
description = ""
authors = ["CAB314 <arai.yuya.qa@alumni.tsukuba.ac.jp>"]
readme = "README.md"
packages = [{include = "formationformatter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
pandas = "^2.2.3"
blobfile = "^3.0.0"
tiktoken = "^0.9.0"
openai = "0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
